Pascal/test/cohadar/pascal/errors/condition_if.pas
program test;
var r: real;
	
begin
	if (r+7) then 
		r := r - 1 
	else 
		r:= r + 1; 
end.